# raybow

./: .gitignore  Cargo.toml  LICENSE  README.md  pgo.sh
.cargo/: config.toml
.github/workflows/: check.yml  release.yml
benches/: vectors.rs
scenes/: spheres.ron
src/: camera.rs  color.rs  image.rs  lib.rs  main.rs  philox.rs  ray.rs  raybow.rs  scene.rs  sync_unsafe_cell.rs  vector.rs
src/geometry/: aabb.rs  bvh.rs  mod.rs  sphere.rs  triangle.rs  world.rs
src/material/: dialectric.rs  diffuse_light.rs  lambertian.rs  metal.rs  mod.rs
