[package]
name = "raybow"
version = "0.2.0"
edition = "2021"

[features]
default = ["simd"]
simd = []

[dependencies]
argh = "0.1.10"
rapid-qoi = "0.6.1"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }

bumpalo = "3.12.0"
num_cpus = "1.15.0"

[profile.release]
lto = "fat"
codegen-units = 1
