[package]
name = "raybow"
version = "0.2.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
rapid-qoi = "0.6.1"
ron = "0.8.0"
serde = { version = "1.0.155", features = ["derive"] }

bumpalo = "3.12.0"
num_cpus = "1.15.0"
png = "0.17.7"
exr = "1.6.3"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc", "derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
