[package]
name = "raybow"
version = "0.2.1"
edition = "2021"

[dependencies]
argh = "0.1.10"
rapid-qoi = "0.6.1"
ron = "0.12.0"
serde = { version = "1.0.155", features = ["derive"] }

bumpalo = "3.12.0"
num_cpus = "1.15.0"
png = "0.18.0"
exr = "1.6.3"
bytemuck = { version = "1.24.0", features = ["extern_crate_alloc", "derive"] }
ctor = "0.6.1"

[profile.release]
lto = "fat"
codegen-units = 1
